src/DragNDrop/dnd.css
.dndflow {
  flex-direction: column;
  display: flex;
  height: 100%;
}

.dndflow aside {
  border-right: 1px solid #eee;
  padding: 15px 10px;
  font-size: 12px;
  background: #fcfcfc;
}

.dndflow aside .description {
  margin-bottom: 10px;
}

.dndflow .nodeList {
  overflow: auto;
}

.dndflow .nodeList div {
  /* Resets position: absolute */
  position: relative;
  margin: 5px;
}

/* Node styles */

.react-flow__node {
  padding: 10px;
  border-radius: 3px;
  box-sizing: border-box;
  width: 180px;
  font-size: 12px;
  color: #222;
  text-align: center;
  border-width: 1px;
  border-style: solid;
  background: #fff;
  border-color: #1a192b;
  --border-color: #1a192b;
}

.react-flow__node.selectable:hover {
    box-shadow: 0 2px 4px 2px rgba(0, 0, 0, 0.08);
}

.react-flow__node.selected,
.react-flow__node.selected:hover
{
  box-shadow: 0 0 0 0.5px var(--border-color);
}

.react-flow__handle-connecting {
  background: #ff6060;
}

.react-flow__handle-valid {
  background: #55dd99;
}

.dndflow .reactflow-wrapper {
  flex-grow: 1;
  height: 100%;
}

@media screen and (min-width: 768px) {
  .dndflow {
    flex-direction: row;
  }

  .dndflow aside {
    width: 285px;
  }
}

input:required:invalid {
  /* box-shadow: 0 0 0 0.5px #FF0000; */
  /* border-color: #c00000; */
  /* border: 2px dashed red; */
  border: 1px solid red;
}

